--- a/src/pages/Experience/ExperienceUI/ExperienceUI.css
+++ b/src/pages/Experience/ExperienceUI/ExperienceUI.css
@@ -2,8 +2,10 @@
   position: absolute;
   top: 2em;
   right: 2vw;
-  width: 3em;
+  width: 5em;
   display: flex;
   flex-direction: column;
   z-index: 1;
+  justify-content: center;
+  align-items: flex-start;
 }
