--- a/src/pages/Experience/ExperienceUI/ExperienceUI.css
+++ b/src/pages/Experience/ExperienceUI/ExperienceUI.css
@@ -9,3 +9,9 @@
   justify-content: center;
   align-items: flex-start;
 }
+
+.shoot_button {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
